富文本编辑器引入

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ qiniu_bucket_name=family-image
 qiniu_domain=http://o6p6h6085.bkt.clouddn.com
 #file config
 spring.http.multipart.maxFileSize=5MB
+# THYMELEAF
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.cache=false
