编写文章相关后台逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #qiniu config
 qiniu_access_key=VHa4LGX7wWoYO7LvHo993ujwX20wZVeSLmuS0RBw
 qiniu_secret_key=UFDm8AdZgMDGrNnVBJYQOZfXhMXl_IzA-EOpSLD8
-qiniu_bucket_name=family-image
-qiniu_domain=http://o6p6h6085.bkt.clouddn.com
+qiniu_bucket_name=visuallife
+qiniu_domain=http://ocb2rlqpi.bkt.clouddn.com
 #file config
 spring.http.multipart.maxFileSize=5MB
 # THYMELEAF
