--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,11 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-java8</artifactId>
-			<version>5.0.9.Final</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.hibernate</groupId>-->
+			<!--<artifactId>hibernate-java8</artifactId>-->
+			<!--<version>5.0.9.Final</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -94,7 +94,6 @@
 			<artifactId>spring-security-core</artifactId>
 			<version>4.1.1.RELEASE</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
