数据库配置信息修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/visuallife
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=297750341
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database=MYSQL
