--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/visuallife
+spring.datasource.url=jdbc:mysql://139.129.4.71:3306/visuallife
 spring.datasource.username=root
 spring.datasource.password=297750341
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
