--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mysql
-spring.datasource.url=jdbc:mysql://139.129.4.71:3306/visuallife
+spring.datasource.url=jdbc:mysql://localhost:3306/visuallife
 spring.datasource.username=root
-spring.datasource.password=297750341
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database=MYSQL
